--- a/src/styles/_members.scss
+++ b/src/styles/_members.scss
@@ -1,7 +1,7 @@
 // Members: Sass packages configured and forwarded.
 
-@forward "precolor";
-@forward "presized";
+@forward 'precolor';
+@forward 'presized';
 
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
