--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,80 +1,90 @@
 // App: Styles for the entire application.
 
-@use "members" as *;
+@use 'members' as *;
 
-*, ::before, ::after {
-	box-sizing: border-box;
-	max-width: 100%;
+*,
+::before,
+::after {
+    box-sizing: border-box;
+    max-width: 100%;
 }
 
-:root, #root {
-	position: absolute;
-	inset: 0;
-	display: block;
-	width: 100%;
-	min-width: $xs;
-	max-width: none;
-	height: 100%;
-	line-height: 1.5;
-	font-family: $sans-serif;
-	word-break: break-word;
-	color-scheme: light dark;
-	overflow: hidden;
+:root,
+#root {
+    position: absolute;
+    inset: 0;
+    display: block;
+    width: 100%;
+    min-width: $xs;
+    max-width: none;
+    height: 100%;
+    line-height: 1.5;
+    font-family: $sans-serif;
+    word-break: break-word;
+    color-scheme: light dark;
+    overflow: hidden;
 }
 
 @include color-schemes using ($color) {
-	:root {
-		background-color: $color;
-		background: linear-gradient(123deg, $purple, $indigo, $fuchsia);
-	}
-	#root {
-		background-color: rgba($color, 0.8);
-		color: high-contrast($white $black, $color);
-	}
+    :root {
+        background-color: $color;
+        background: linear-gradient(123deg, $purple, $indigo, $fuchsia);
+    }
+    #root {
+        background-color: rgba($color, 0.8);
+        color: high-contrast($white $black, $color);
+    }
 }
 
-h1, h2, h3, h4, h5, h6 {
-	display: block;
-	font-family: $display;
-	line-height: 1.33;
-	margin: size(-3) 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    display: block;
+    font-family: $display;
+    line-height: 1.33;
+    margin: size(-3) 0;
 }
 
 h1 {
-	@include font-size(3);
+    @include font-size(3);
 }
 
 h2 {
-	@include font-size(2);
+    @include font-size(2);
 }
 
 h3 {
-	@include font-size(1);
+    @include font-size(1);
 }
 
 h4 {
-	@include font-size(0);
+    @include font-size(0);
 }
 
 h5 {
-	@include font-size(-1);
+    @include font-size(-1);
 }
 
 h6 {
-	@include font-size(-2);
+    @include font-size(-2);
 }
 
-small, sup, sub {
-	font-size: size(-1);
+small,
+sup,
+sub {
+    font-size: size(-1);
 }
 
 a[href] {
-	&:not(:hover, :focus) {
-		text-decoration-line: none;
-	}
-	@include color-schemes using ($color) {
-		@include contrast using ($ratio) {
-			color: contrast-color($primary, $color, $ratio);
-		}
-	}
+    &:not(:hover, :focus) {
+        text-decoration-line: none;
+    }
+    @include color-schemes using ($color) {
+        @include contrast using ($ratio) {
+            color: contrast-color($primary, $color, $ratio);
+        }
+    }
 }
