--- a/src/styles/login-modal.scss
+++ b/src/styles/login-modal.scss
@@ -30,11 +30,11 @@
         flex: 0 0 auto;
         width: 100%;
         max-width: $md;
-        box-shadow: 0 4px 12px -8px $secondary;
         border-radius: size(-1);
         margin: auto;
         @include container(login-modal);
         @include color-schemes using ($color) {
+			box-shadow: 0 3px 12px -3px contrast-color($secondary, $color, a11y(aa ui));
             background-color: $color;
             color: high-contrast($white $black, $color);
         }
