Added generic link class for styling onClick links.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -95,7 +95,8 @@ sub {
     font-size: size(-1);
 }
 
-a[href] {
+a[href], .link {
+	cursor: pointer;
     &:not(:hover, :focus) {
         text-decoration-line: none;
     }
