--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -4,6 +4,7 @@
     gap: 20px;
     flex-direction: column;
     border: 2px solid red;
+    border-radius: 25px;
     scroll-behavior: smooth;
     height: 70vh;
     overflow: auto;
