--- a/src/styles/dock.scss
+++ b/src/styles/dock.scss
@@ -54,7 +54,7 @@ $_height: 44px;
             }
         }
         &[data-server='true'] {
-            border-radius: 9999px;
+            border-radius: 50%;
             order: -1;
         }
     }
@@ -66,7 +66,6 @@ $_height: 44px;
         min-height: 100%;
         object-fit: cover;
         object-position: center center;
-        padding: 4px;
     }
     &-server-container {
         display: flex;
