--- a/src/styles/_members.scss
+++ b/src/styles/_members.scss
@@ -5,8 +5,9 @@
 );
 @forward 'presized';
 
-@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,900;1,400;1,900&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 // Font Families:
 $display: 'Lobster Two', cursive;
+$display-alt: 'Lato', sans-serif;
 $sans-serif: 'Poppins', sans-serif;
