--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -1,30 +1,141 @@
+// Rendered Note: Markdown styles for rendered note information.
+
+@use "members" as *;
+
 .messages {
-    padding: 20px;
-    display: flex;
-    gap: 20px;
-    flex-direction: column;
-    border: 2px solid red;
-    border-radius: 25px;
-    scroll-behavior: smooth;
-    height: 70vh;
-    overflow: auto;
-    transition: width 250ms ease-out;
-    &-chat {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        border: 2px solid purple;
-        border-radius: 20px;
-        padding: 10px;
-    }
-    &-pfp {
-        border-radius: 50%;
-        overflow: hidden;
-        height: 60px;
-        width: 60px;
-        object-fit: cover;
-    }
-    &-username {
-        font-size: 25px;
-    }
+	display: flex;
+	flex-flow: column nowrap;
+	@include container(messages);
+	&-chat {
+		display: flex;
+		flex-flow: column nowrap;
+		align-items: flex-start;
+		justify-content: flex-start;
+		gap: size(-1) size(-3);
+		margin: 0 auto;
+		@include modular-scale(1, padding);
+		@include breakpoint($md) {
+			flex-flow: row nowrap;
+		}
+	}
+	&-profile {
+		display: flex;
+		flex-flow: row nowrap;
+		align-items: center;
+		gap: size(0);
+		flex: 1 0 auto;
+		@include font-size(1);
+		@include breakpoint($md) {
+			width: $xs;
+		}
+		& > * {
+			flex: 0 1 auto;
+		}
+	}
+	&-pfp {
+		display: block;
+		width: size(1);
+		height: size(1);
+		border-radius: 9999px;
+	}
+	&-username {
+		display: block;
+		font-family: $display-alt;
+		font-weight: 600;
+		font-size: size(-1);
+		margin: 0;
+	}
+	&-content {
+		display: block;
+		width: $lg;
+		border-radius: 3px size(1) size(2);
+		overflow: hidden;
+		@include container(messages-content);
+		@include color-schemes(50, 800) using ($weight) {
+			$bg: color-weight($secondary, $weight);
+			border: 1px solid shade($bg, 10%);
+			background-color: $bg;
+			box-shadow: 3px 3px 8px -4px $bg;
+			color: high-contrast($white $black, $bg);
+		}
+	}
+}
+
+.messages-text {
+	display: block;
+	@include modular-scale(1, margin);
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		font-family: $display-alt;
+	}
+
+	p {
+		margin: size(0) 0;
+	}
+
+	code {
+		hyphens: none;
+		tab-size: 4;
+	}
+
+	pre {
+		overflow-x: auto;
+	}
+
+	blockquote {
+		display: block;
+		padding: size(0) size(1);
+		margin: 0;
+		@include color-schemes using ($color) {
+			border-left: 3px solid contrast-color($gray, $color, a11y(aa ui));
+		}
+	}
+
+	img {
+		display: block;
+		width: 100%;
+		max-width: $md;
+		border-radius: size(-1);
+		margin: size(0) 0;
+	}
+
+	hr {
+		display: block;
+		width: 90%;
+		max-width: $lg;
+		margin: size(2) auto;
+	}
+
+	table {
+		display: block;
+		max-width: $xxl;
+		min-width: 0;
+		border-collapse: collapse;
+		overflow-x: auto;
+	}
+
+	thead {
+		border-bottom: 2px solid currentColor;
+	}
+
+	tr {
+		@include color-schemes using ($color) {
+			border-bottom: 1px solid contrast-color($gray, $color, a11y(aa ui));
+		}
+	}
+
+	th,
+	td {
+		width: 1%;
+		min-width: 100px;
+		max-width: $sm;
+		vertical-align: top;
+		white-space: normal;
+		padding: size(-1) 4px;
+	}
 }
