fix un-needed max-width

--- a/src/styles/home-page.scss
+++ b/src/styles/home-page.scss
@@ -1,22 +1,20 @@
 // Home Page: Styles for the application home.
 
-@use "members" as *;
+@use 'members' as *;
 
 .home-page {
-	position: fixed;
-	inset: 0;
-	display: flex;
-	flex-flow: column nowrap;
-	max-width: $xxl;
-	margin: auto;
-	@include container(home-page);
-	& > * {
-		flex: 0 0 auto;
-	}
-	.messages {
-		min-width: 100%;
-		scroll-behavior: smooth;
-		flex: 1 1 auto;
-		overflow: auto;
-	}
+    position: fixed;
+    inset: 0;
+    display: flex;
+    flex-flow: column nowrap;
+    @include container(home-page);
+    & > * {
+        flex: 0 0 auto;
+    }
+    .messages {
+        min-width: 100%;
+        scroll-behavior: smooth;
+        flex: 1 1 auto;
+        overflow: auto;
+    }
 }
