Styled InputArea component.

--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,6 +1,7 @@
 // Button: Styles for the clickable action element.
 
 @forward 'text-field';
+@use 'sass:map' as map;
 @use 'members' as *;
 
 .button {
@@ -8,19 +9,15 @@
     width: auto;
     font-weight: bold;
     border-radius: size(0);
-    padding: size(-4) size(2);
+    padding: size(-4) size(0);
     margin: 0;
     overflow: hidden;
     cursor: pointer;
     @extend .text-field-input, .primary;
     @include color-schemes using ($bg) {
-        @each $name, $color in $color-palette {
+        @each $name, $color in map.merge($colors, $color-palette) {
             &.#{$name} {
-                border-color: contrast-color(
-                    $color,
-                    $bg,
-                    a11y(aa ui)
-                ) !important;
+                border-color: contrast-color($color, $bg, a11y(aa ui));
                 @include contrast using ($ratio) {
                     color: contrast-color($color, $bg, $ratio);
                 }
