--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,6 +5,8 @@
 *,
 ::before,
 ::after {
+    background-size: cover;
+    background-position: center;
     box-sizing: border-box;
     max-width: 100%;
 }
@@ -26,12 +28,13 @@
 }
 
 :root {
-    @include color-schemes using ($color) {
-        background-color: $color;
-    }
+    #{--custom-wallpaper}: linear-gradient(123deg, $blue, $indigo, $purple, $red);
     background-image: var(--custom-wallpaper, none);
     background-attachment: fixed;
     background-size: cover;
+    @include color-schemes using ($color) {
+        background-color: $color;
+    }
 }
 
 #root {
