Corrected background opacity filter for wallpaper.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -38,11 +38,9 @@
 }
 
 #root {
-    background-color: rgba($light, 0.6);
-    color: $black;
-    @include dark {
-        background-color: rgba($dark, 0.8);
-        color: $white;
+    @include color-schemes using ($color) {
+        background-color: rgba($color, 0.8);
+        color: high-contrast($white $black, $color);
     }
     &::before {
         content: '';
