--- a/src/styles/settings-panel.scss
+++ b/src/styles/settings-panel.scss
@@ -5,23 +5,24 @@
 .settings-panel {
     position: absolute;
     z-index: 10;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    inset: auto size(0) size(0);
     display: block;
-    width: $md;
-    max-height: 70vh;
-    backdrop-filter: blur(8px);
-    border-radius: size(-1) size(-1) 0 0;
-    padding: size(1) size(2) size(4);
-    margin: 0 !important;
+    max-width: $md;
+    height: $sm;
+    max-height: 66vh;
+    backdrop-filter: blur(16px);
+    border-radius: size(-1);
+    padding: size(1) size(2);
+    margin: 0 auto;
     overflow: auto;
-    transition: transform 250ms ease-out;
-    &:not([data-open="true"]) {
-        transform: translate(-50%, 100%);
+    transform: translateY(100%) translateY(size(0));
+    transition: transform 300ms ease;
+    &[data-open="true"] {
+        transform: translateY(0);
     }
     @include container(settings-panel);
     @include color-schemes using ($color) {
-        background-color: rgba($color, 0.8);
+        box-shadow: 0 0 8px -2px $color;
+        background-color: rgba(color-shift($color, 5%), 0.8);
     }
 }
