--- a/src/styles/emoji-container.scss
+++ b/src/styles/emoji-container.scss
@@ -1,16 +1,28 @@
+// Emoji Container: Styles for the Emoji selection picker.
+
+@use "members" as *;
+
 .emoji-container {
-    display: flex;
-    overflow: scroll;
-    flex-wrap: wrap;
-    width: 25vw;
-    height: 25vw;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    border: 2px solid rgb(0, 136, 255);
-    bottom: 16vh;
-    background-color: rgb(0, 0, 0);
-    font-size: 30px;
-    padding: 10px;
-    border-radius: 25px;
+    display: block;
+    width: 100%;
+    max-height: $xxl;
+    overflow: auto;
+    transition: max-height 750ms ease;
+    &:not([data-open="true"]) {
+        max-height: 0px;
+    }
+    @include container(emoji-container);
+    &-text {
+        display: flex;
+        flex-flow: row wrap;
+        gap: size(-3);
+        transition: max-height 500ms ease;
+        @include font-size(2);
+        & > * {
+            flex: 1 1 0px;
+            &:last-child {
+                flex: 9999 1 0px;
+            }
+        }
+    }
 }
