--- a/src/styles/text-field.scss
+++ b/src/styles/text-field.scss
@@ -18,7 +18,7 @@
         background-color: transparent;
         border-radius: size(-3);
         padding: size(-4) size(-2);
-        margin: 2px 0;
+        margin: 0;
         color: inherit;
         appearance: none;
         outline: none;
