--- a/src/styles/text-field.scss
+++ b/src/styles/text-field.scss
@@ -3,6 +3,8 @@
 @use 'members' as *;
 
 .text-field {
+    display: flex;
+    flex-flow: row wrap;
     &-label,
     &-input {
         font-family: $sans-serif;
@@ -20,8 +22,11 @@
         padding: size(-4) size(-2);
         margin: 0;
         color: inherit;
-        appearance: none;
         outline: none;
+        &[type="checkbox"], &[type="radio"] {
+            width: auto;
+            margin: 4px;
+        }
         &:not(:hover) {
             transition: background-color 150ms linear;
         }
