--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -16,6 +16,7 @@
     overflow: auto;
     transition: opacity 500ms ease;
     @include color-schemes using ($color) {
+        border: 1px solid contrast-color($secondary, $color, a11y(aa ui));
         background-color: $color;
     }
     &::backdrop {
