--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -17,7 +17,7 @@
     transition: opacity 500ms ease;
     @include color-schemes using ($color) {
         border: 1px solid contrast-color($secondary, $color, a11y(aa ui));
-        background-color: $color;
+        background-color: rgba($color, 0.66);
     }
     &::backdrop {
         backdrop-filter: blur(24px);
