Corrected object-fit on Messages pfp.

--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -43,6 +43,7 @@
     &-pfp {
         display: block;
         border-radius: 9999px;
+        object-fit: cover;
         @include font-size(2, width, height);
     }
     &-username {
